Increase F16 button delays, refactor dialogs